# kanban

./: README.md
kanban-api/: kanban.db  main.py  pyproject.toml  requirements.txt
kanban-api/app/: database.py  init_db.py
kanban-api/app/crud/: __init__.py  column.py  comment.py  tag.py  task.py  user.py
kanban-api/app/models/: models.py
kanban-api/app/routers/: columns.py  comments.py  tags.py  tasks.py  users.py
kanban-api/app/schemas/: __init__.py  column.py  comment.py  tag.py  task.py  user.py
kanban-app/: README.md  package-lock.json  package.json
kanban-app/src/: App.css  App.js
kanban-app/src/components/Board/: Board.css  Board.js
kanban-app/src/components/Column/: Column.css  Column.js
kanban-app/src/components/Task/: Task.css  Task.js
kanban-app/src/components/TaskModal/: TaskModal.css  TaskModal.js
kanban-app/src/context/: KanbanContext.js
kanban-app/src/services/: api.js
kanban-app/src/utils/: dateUtils.js  userUtils.js
