[project]
name = "kanban-api"
version = "0.1.0"
description = "A Kanban API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.12.1",
    "fastapi==0.104.1",
    "httpx==0.25.1",
    "pydantic==2.4.2",
    "pytest==7.4.3",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "uvicorn==0.23.2",
]
